@@ -1,3 +1,7 @@
+drkns 04.08.2016 22:16:44 +0200 - build 4750
+
+1. Уточнение 4748.
+
 drkns 03.08.2016 23:30:06 +0200 - build 4749
 
 1. Вместо %1, %2, %3... в коде и языковых файлах теперь {0}, {1}, {2}...
